--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-4 col-12-xsmall"><a href="resume.html" class="button primary">Resume</a></div>
-								<div class="col-4 col-12-xsmall"><a href="#" class="button primary">E-mail</a></div>
-								<div class="col-4 col-12-xsmall"><a href="http://www.linkedin.com/in/kevinsurjadi/" class="button primary">LinkedIn</a></div>
+								<a href="resume.html" class="button primary icon solid fa-envelope">Resume</a></div>
 							</div>
 						</form>
 					</div>
