--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
-								<a href="resume.html" class="button primary icon solid fa-envelope">Resume</a></div>
+								<li><a href="resume.html" class="button primary icon fa fa-id-card">Resume</a></div></li>
 							</div>
 						</form>
 					</div>
