--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
 
 			<!-- Five -->
 				<section id="three" class="wrapper style1 special fade">
-					<div class="container">
-						<header>
-							<h2>What I've done and what I can do.</h2>
-							<p>Feel free to connect with me via my via email or linkedIn : )</p>
-						</header>
-						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<li><a href="resume.html" class="button primary icon fa fa-id-card">Resume</a></div></li>
-							</div>
-						</form>
-					</div>
+				<div class="container">
+					<header>
+						<h2>What I've done and what I can do.</h2>
+						<p>Feel free to connect with me via my via email or linkedIn : )</p>
+					</header>
+					<form method="post" action="#" class="cta">
+						<div class="icons">
+							<a href="resume.html" class="button primary icon fa fa-id-card">Resume</a></div>
+						</div>
+					</form>
+				</div>
 				</section>
 
 			<!-- Footer -->
