--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
 							<li><a href="https://www.afr.com/work-and-careers/education/why-grads-need-to-know-what-you-want-20200211-p53zr4" class="button">View Article</a></li>
 						</ul>
 					</div>
+					<a href="#three" class="goto-next scrolly">Next</a>
+				</section>
+
+
+			<!-- Five -->
+				<section id="three" class="wrapper style1 special fade">
+				<div class="container">
+					<header>
+						<h2>What I've done and what I can do.</h2>
+						<p>Feel free to connect with me via my via email or linkedIn : )</p>
+					</header>
+					<form method="post" action="#" class="cta">
+						<ul class="actions">
+							<li><a href="resume.html" class="button">Resume</a></li>
+						</ul>
+					</form>
+				</div>
 				</section>
 
 			<!-- Footer -->
