--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					</header>
 					<form method="post" action="#" class="cta">
 						<ul class="actions">
-							<li><a href="resume.html" class="button">Resume</a></li>
+							<li><a href="resume.html" class="button primary fit">Resume</a></li>
 						</ul>
 					</form>
 				</div>
