--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
 			<!-- Five -->
-				<section id="three" class="wrapper style1 special fade">
+				<section id="three" class="wrapper style2 special fade">
 				<div class="container">
 					<header>
 						<h2>What I've done and what I can do.</h2>
@@ -95,7 +95,7 @@
 					</header>
 					<form method="post" action="#" class="cta">
 						<ul class="actions">
-							<li><a href="resume.html" class="button primary fit">Resume</a></li>
+							<li><a href="resume.html" class="button primary small fit">Resume</a></li>
 						</ul>
 					</form>
 				</div>
