--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<p>Feel free to connect with me via my via email or linkedIn : )</p>
 					</header>
 					<form method="post" action="#" class="cta">
-						<ul class="actions">
+						<ul class="col-6 col-12-small">
 							<li><a href="resume.html" class="button primary small fit">Resume</a></li>
 						</ul>
 					</form>
