--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					</header>
 					<form method="post" action="#" class="cta">
 						<ul class="col-6 col-12-small">
-							<li><a href="resume.html" class="button primary small fit">Resume</a></li>
+							<a href="resume.html" class="button primary small fit">Resume</a>
 						</ul>
 					</form>
 				</div>
