--- a/resume.html
+++ b/resume.html
@@ -76,23 +76,23 @@
 									<h2>Professional Employment</h2>
 									<ul></ul>
 									<h4>Westpac Group</h4>
-									<p>Private Wealth Intern・3 months<span class="image right"><img src="images/Westpac.jpg" alt="" /></span></p>
+									<p>Private Wealth Intern・3 months</p>
 									<ul>
-										<li>Managed investment orders of high net worth clients, ensuring that they meet wholesale criteria before sending orders through to investment banks for purchase.</li>
+										<li><span class="image right"><img src="images/Westpac.jpg" alt="" /></span>Managed investment orders of high net worth clients, ensuring that they meet wholesale criteria before sending orders through to investment banks for purchase.</li>
 										<li>Utilised VBA to assist in automating the reinvestment cut-off data base into a calendar format, saving associates approximately 5 minutes every time an investment order was processed using raw data base.</li>
 									</ul>
 									<ul></ul>
 									<h4>Deloitte</h4>
-									<p>Assurance Intern・2 months<span class="image right"><img src="images/Deloitte.jpg" alt="" /></span></p>
+									<p>Assurance Intern・2 months</p>
 									<ul>
-										<li>Completed substantive and detail testing procedures for a multinational broadcasting company (Net $2.5B) and a multinational Agribusiness company (Net $3.8B) including sales revenue and cost of sales testing.</li>
+										<li><span class="image right"><img src="images/Deloitte.jpg" alt="" /></span>Completed substantive and detail testing procedures for a multinational broadcasting company (Net $2.5B) and a multinational Agribusiness company (Net $3.8B) including sales revenue and cost of sales testing.</li>
 										<li>Worked on existence and completeness testing on inventory and utilised problem solving and client communication in order to learn about simulated price listings totalling an error of $60m previously unknown.</li>
 									</ul>
 									<ul></ul>
 									<h4>Ernst and Young</h4>
-									<p>Assurance Intern・2 months<span class="image right"><img src="images/EY.jpg" alt="" /></span></p>
+									<p>Assurance Intern・2 months</p>
 									<ul>
-										<li>Adopted professionalism and competence in client’s environment, applying communication skills in order to resolve proof of delivery (POD) and bank statement issues regarding inconsistent documentation worth $2M.</li>
+										<li><span class="image right"><img src="images/EY.jpg" alt="" /></span>Adopted professionalism and competence in client’s environment, applying communication skills in order to resolve proof of delivery (POD) and bank statement issues regarding inconsistent documentation worth $2M.</li>
 										<li>Accurately documented execution on internal control procedures, reporting to assurance team with 3 key potential internal control issues worth $400k recognised.										</li>
 									</ul>
 
