--- a/resume.html
+++ b/resume.html
@@ -64,9 +64,9 @@
 									<h2>Education</h2>
 									<ul></ul>
 									<h4>University of New South Wales</h4>
-									<p>B Commerce / B Information Systems<span class="image right"><img src="images/UNSW.jpg" alt="" /></span></p>
+									<p>B Commerce / B Information Systems</p>
 									<ul>
-										<li>Distinction Weighted Average Mark.</li>
+										<li><span class="image right"><img src="images/UNSW.jpg" alt="" /></span>Distinction Weighted Average Mark.</li>
 										<li>Winner of Australian Financial Review Top 100 Future Leaders Competition.</li>
 										<li>Recipient of Chartered Accountants Accounting Award.</li>
 									</ul>
