--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<p>Awarded as one of the most promising future leaders graduating from Australia</p>
 						</header>
 						<hr/>
-						<p>GradConnection’s Top 100’s Future Leaders Accounting Award winner Kevin Surjadi shares how this experience has helped him prepare for his journey to becoming a CA.</p>
+						<p>GradConnection’s Top 100 Future Leaders Accounting Award winner Kevin Surjadi shares how this experience has helped him prepare for his journey to becoming a CA.</p>
 						<ul class="actions">
 							<li><a href="https://www.afr.com/work-and-careers/education/why-grads-need-to-know-what-you-want-20200211-p53zr4" class="button">View Article</a></li>
 						</ul>
