--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2 style = "font-family: roboto; font-size: 220%">What I've done and what I can do.</h2>
+							<h2 style = "font-family: roboto; font-size: 220%; text-align: center">What I've done and what I can do.</h2>
 							<p style = "text-align: center; font-family: roboto">Feel free to reach out via email or linkedIn if you want to chat : )</p>
 							<hr/>
 							<form method="post" action="#" class="cta">
