--- a/resume.html
+++ b/resume.html
@@ -67,19 +67,19 @@
 									<h4>Westpac Group<span class="image right"><img src="images/Westpac.jpg" alt="" /></span></h4>
 									<ul>
 										<li>Private Wealth Intern</li>
-										<li>Feb 2020 - Apr 2020・3 months</li>
+										<li>Feb 20 - Apr 20・3 mos</li>
 									</ul>
 									<ul></ul>
 									<h4>Deloitte<span class="image right"><img src="images/Deloitte.jpg" alt="" /></span></h4>
 									<ul>
 										<li>Assurance Intern</li>
-							 			<li>Jan 2020 - Feb 2020・2 months</li>
+							 			<li>Jan 20 - Feb 20・2 mos</li>
 									</ul>
 									<ul></ul>
 									<h4>Ernst and Young<span class="image right"><img src="images/EY.jpg" alt="" /></span></h4>
 									<ul>
 										<li>Assurance Intern</li>
-										<li>Jul 2019 - Aug 2019・2 months</li>
+										<li>Jul 19 - Aug 19・2 mos</li>
 									</ul>
 
 								<hr />
