--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,8 @@
 									<ul></ul>
 									<h4>University of New South Wales<span class="image right"><img src="images/UNSW.jpg" alt="" /></span></h4>
 									<ul>
-										<li>B Commerce / B Information Systems</li>
+										<li>B Commerce</li>
+										<li>B Information Systems</li>
 										<li>2018 - 2021</li>
 									</ul>
 
