--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 							<section>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
-										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/b1_book.png" alt="" /></span></div></a>>
+										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/b1_book.png" alt="" /></span></div></a>
 										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/b1.png" alt="" /></span></div></a>
 										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/fabs.png" alt="" /></span></div></a>
 										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/asoc.png" alt="" /></span></div></a>
