--- a/portfolio.html
+++ b/portfolio.html
@@ -54,9 +54,10 @@
 										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/b1.png" alt="" /></span></div></a>
 										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/fabs.png" alt="" /></span></div></a>
 										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/asoc.png" alt="" /></span></div></a>
+										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/asocHoodie.png" alt="" /></span></div></a>
 										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
 										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/Firelook.jpg" alt="" /></span></div></a>
-										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/asocHoodie.png" alt="" /></span></div></a>
+										<div class="col-4 col-6-xsmall"><a href="#"><span class="image fit"><img src="images/aurelian.png" alt="" /></span></div></a>
 									</div>
 								</div>
 							</section>
