--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<hr/>
 						<p>GradConnection’s Top 100 Future Leaders Accounting Award winner Kevin Surjadi shares how this experience has helped him prepare for his journey to becoming a CA.</p>
 						<ul class="actions">
-							<li><a href="https://www.afr.com/work-and-careers/education/why-grads-need-to-know-what-you-want-20200211-p53zr4" class="button">View Article</a></li>
+							<li><a href="https://www.youunlimitedanz.com/be-inspired/articles/gradconnections-top100-accounting-award-winner-kevin-surjadi" class="button">View Article</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
