--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style3 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/pic02.jpg..jpeg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
