--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<hr/>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>As a self-motivated individual, I am a strong believer in continuous development and life-long education. I am constantly striving to be a better version of myself as I embark on my aspirations in becoming a Strategy Consultant within the technology landscape.
+									<p>As a self-motivated individual, I am a strong believer in continuous development and life-long education. I am constantly striving to be a better version of myself as I embark on my aspirations in becoming a professional within the technology landscape.
 									</p>
 								</div>
 								<div class="col-4 col-12-medium">
