--- a/resume.html
+++ b/resume.html
@@ -60,6 +60,21 @@
 										<li>B Information Systems</li>
 										<li>2018 - 2021</li>
 									</ul>
+									<ul></ul>
+									<h4>International Competitions</h4>
+									<ul>
+										<li>Finalist | Kearney Global Case Competition, Melbourne, 2019</li>
+										<li>Case Team | USBS Case Competition, Sydney, 2019</li>
+									</ul>
+									<ul></ul>
+									<h4>Domestic Competitions</h4>
+									<ul>
+										<li>1st | SAP Consulting Case Competition, 2020</li>
+										<li>1st | 180DC Social Impact Case Crack, 2020</li>
+										<li>1st | UCC Capital W Case Crack, 2020</li>
+										<li>1st | UMCG Gloabl Microfinance Case Competition, 2019</li>
+										<li>1st | UNSW Marketing Case Competition, 2019</li>
+									</ul>
 
 								<hr />
 								
