--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 				<div id="one" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Design Portfolio</h2>
+							<h2>Projects</h2>
 						</header>
 
 						<!-- Image -->
