--- a/resume.html
+++ b/resume.html
@@ -72,8 +72,10 @@
 										<li>1st | SAP Consulting Case Competition, 2020</li>
 										<li>1st | 180DC Social Impact Case Crack, 2020</li>
 										<li>1st | UCC Capital W Case Crack, 2020</li>
-										<li>1st | UMCG Gloabl Microfinance Case Competition, 2019</li>
+										<li>1st | UMCG Global Microfinance Case Competition, 2019</li>
 										<li>1st | UNSW Marketing Case Competition, 2019</li>
+										<li>2nd | UMCG Global Microfinance Case Competition, 2020</li>
+										<li>3rd | WPP AUNZ Case Competition, 2020</li>
 									</ul>
 
 								<hr />
