--- a/resume.html
+++ b/resume.html
@@ -70,6 +70,7 @@
 									<h4>Domestic Competitions</h4>
 									<ul>
 										<li>1st | SAP Consulting Case Competition, 2020</li>
+										<li>1st | I4C Charities Pitch Case Competition, 2020</li>
 										<li>1st | 180DC Social Impact Case Crack, 2020</li>
 										<li>1st | UCC Capital W Case Crack, 2020</li>
 										<li>1st | UMCG Global Microfinance Case Competition, 2019</li>
