--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,6 @@
 									<h4>Domestic Competitions</h4>
 									<ul>
 										<li>1st | SAP Consulting Case Competition, 2020</li>
-										<li>1st | I4C Charities Pitch Case Competition, 2020</li>
 										<li>1st | 180DC Social Impact Case Crack, 2020</li>
 										<li>1st | UCC Capital W Case Crack, 2020</li>
 										<li>1st | UMCG Global Microfinance Case Competition, 2019</li>
@@ -80,24 +79,30 @@
 									</ul>
 
 								<hr />
-								
+									
 									<h2>Professional Employment</h2>
+									<ul></ul>
+									<h4>Deloitte<span class="image right"><img src="images/Deloitte.jpg" alt="" /></span></h4>
+									<ul>
+										<li>Summer Analyst | Consulting</li>
+							 			<li>Incoming・2 mos</li>
+									</ul>
 									<ul></ul>
 									<h4>Westpac Group<span class="image right"><img src="images/Westpac.jpg" alt="" /></span></h4>
 									<ul>
-										<li>Private Wealth Intern</li>
+										<li>Associate | Private Wealth</li>
 										<li>Feb 20 - Apr 20・3 mos</li>
 									</ul>
 									<ul></ul>
 									<h4>Deloitte<span class="image right"><img src="images/Deloitte.jpg" alt="" /></span></h4>
 									<ul>
-										<li>Assurance Intern</li>
+										<li>Summer Analyst | Assurance</li>
 							 			<li>Jan 20 - Feb 20・2 mos</li>
 									</ul>
 									<ul></ul>
 									<h4>Ernst and Young<span class="image right"><img src="images/EY.jpg" alt="" /></span></h4>
 									<ul>
-										<li>Assurance Intern</li>
+										<li>Winter Associate | Assurance</li>
 										<li>Jul 19 - Aug 19・2 mos</li>
 									</ul>
 
