--- a/resume.html
+++ b/resume.html
@@ -69,13 +69,17 @@
 									<ul></ul>
 									<h4>Domestic Competitions</h4>
 									<ul>
+										<li>1st | Bain & Company Champion's Cup, 2020</li>
 										<li>1st | SAP Consulting Case Competition, 2020</li>
+										<li>1st | I4C Charities Pitch, 2020</li>
 										<li>1st | 180DC Social Impact Case Crack, 2020</li>
 										<li>1st | UCC Capital W Case Crack, 2020</li>
 										<li>1st | UMCG Global Microfinance Case Competition, 2019</li>
 										<li>1st | UNSW Marketing Case Competition, 2019</li>
 										<li>2nd | UMCG Global Microfinance Case Competition, 2020</li>
-										<li>3rd | WPP AUNZ Case Competition, 2020</li>
+										<li>2nd | UNSW FMAA Consulting Case Competition, 2020</li>
+										<li>3rd | WPP Consulting Case Competition, 2020</li>
+										<li>3rd | IM/Pact Investment Case Competition, 2020</li>
 									</ul>
 
 								<hr />
